--- a/CountDominance.bib
+++ b/CountDominance.bib
@@ -193,3 +193,10 @@
 	year={2020},
 	publisher={Nature Publishing Group}
 }
+
+@book{mccullagh2019generalized,
+	title={Generalized linear models},
+	author={McCullagh, Peter and Nelder, John A},
+	year={2019},
+	publisher={Routledge}
+}
